# cp-bg-bench

./: LICENSE  README.md
data/: README.md  pixi.toml  pyproject.toml
data/config/: config.yml  config_smoke.yml  config_smoke_rxrx1.yml  config_smoke_rxrx3_core.yml  config_target2.yml  config_training.yml  config_training_rxrx1.yml  config_training_rxrx3_core.yml  jump.yml  jump_target2.yml  jump_training.yml  jump_training_oversample.parquet  rxrx1.yml  rxrx1_smoke.yml  rxrx1_training.yml  rxrx1_training_oversample.parquet  rxrx3_core.yml  rxrx3_core_smoke.yml  rxrx3_training.yml  smoke.yml
data/scripts/: analyze_jump_compound_coverage.py  build_hf_subset.py  fetch_gene_sequences.py  make_jump_target2_config.py  make_jump_training_config.py  make_rxrx1_training_config.py  make_rxrx3_core_gene_list.py  resolve_sirna_genes.py  upload_hf_subset.py
data/snakemake/: Snakefile
data/tests/: test_alignment.py  test_calibrate.py  test_config.py  test_crops.py  test_datasets.py  test_download_rxrx1_pngs.py  test_download_rxrx3_core_jp2.py  test_download_tiffs.py  test_io_jump.py  test_io_rxrx1.py  test_io_rxrx3_core.py  test_runtime.py  test_segment.py  test_select.py  test_transforms.py  test_zarr_io.py
evals/: .gitignore  README.md  pixi.toml  pyproject.toml  runs.csv
evals/01_perturbation_recall/: 003_perturbation_recall.ipynb  JUMP_perturbation_recall.ipynb  Rxrx1_perturbation_recall.ipynb  Rxrx3C_perturbation_recall.ipynb  compute_within_and_across_batch_recall.py  perturbation_recall_jump.csv  perturbation_recall_rxrx1.csv  perturbation_recall_rxrx3c.csv  perturbation_recall_within_across_jump.csv  perturbation_recall_within_across_rxrx1.csv  perturbation_recall_within_across_rxrx3c.csv  pixi.toml
evals/02_batch_integration/: 002_batch_integration.ipynb  JUMP_scib_delta.csv  JUMP_scib_full.csv  JUMP_scib_metrics.ipynb  Rxrx1_scib_delta.csv  Rxrx1_scib_full.csv  Rxrx1_scib_metrics.ipynb  Rxrx3C_scib_delta.csv  Rxrx3C_scib_full.csv  Rxrx3C_scib_metrics.ipynb  pixi.toml
evals/03_phenotypic_activity/: 001_background_exploitability.ipynb  JUMP_phenotypic_activity.ipynb  Rxrx1_phenotypic_activity.ipynb  Rxrx3C_phenotypic_activity.ipynb  phenotypic_activity_jump.csv  phenotypic_activity_rxrx1.csv  phenotypic_activity_rxrx3c.csv  pixi.toml  table5_1_all_views_post_harmony.csv
evals/04_cp_feature_prediction/: 004_predict_cpm_features.ipynb  JUMP_cp_feature_prediction.ipynb  Rxrx1_cp_feature_prediction.ipynb  Rxrx3C_cp_feature_prediction.ipynb  cp_feature_prediction_jump.csv  cp_feature_prediction_rxrx1.csv  cp_feature_prediction_rxrx3c.csv  pixi.toml
evals/baselines/: add_pca_harmony.py  aggregate_cp_features.py  compute_cp_features.py  perturbation_recall_cp_measure_dl_pipeline.csv  perturbation_recall_cp_measure_dl_pipeline.py  perturbation_recall_within_and_across_cp_measure.csv  perturbation_recall_within_and_across_cp_measure.py  (+3 more)
model/: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
(+173 files in other folders)
