[project]
name = "cp-bg-bench-evals"
version = "0.1.0"
description = "Evaluation notebooks and scripts for cp-bg-bench."
requires-python = ">=3.10"
license = { file = "../LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
